# qfloptool

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows_msvc2019.yml  windows_msvc2022.yml  windows_msys2.yml
scripts/: qfloptool_build_msvc.sh  qfloptool_build_msys2.sh
src/: floptool.cpp  floptool.h  imageitemmodel.cpp  imageitemmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/dialogs/: identify.cpp  identify.h  identify.ui  viewfile.cpp  viewfile.h  viewfile.ui
src/mame_generated/: has_formats.h
